syntax = "proto3";

package player.v1;
option go_package = "player/v1;playerv1";

import "player/v1/player.proto";

import "validate/validate.proto";
import "google/protobuf/empty.proto";

service PlayerService {
  rpc CreatePlayer (CreatePlayerRequest) returns (google.protobuf.Empty);
  rpc GetPlayer (GetPlayerRequest) returns (GetPlayerResponse);
}

message CreatePlayerRequest {
  string nickname = 1 [(validate.rules).string.pattern = "^[a-zA-Z0-9][\\w]{3,24}$"]; // required
  string email = 2 [(validate.rules).string = { email: true, max_len: 320 }]; // required
  string password = 3 [(validate.rules).string = { min_len: 10, max_len: 128 }]; // required
}

message GetPlayerRequest {
  string nickname = 1; // required
}

message GetPlayerResponse {
  Player player = 1;
}